tests/ui/derived_res_no_ref_unit.stderr
error[E0277]: the trait bound `Baz: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_res_no_ref_unit.rs:22:1
   |
22 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Baz`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Bar
             Foo
             f64
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Baz: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_res_no_ref_unit.rs:22:1
   |
22 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Baz`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Bar
             Foo
             f64
note: required because of the requirements on the impl of `std::ops::Div<Bar>` for `Baz`
  --> tests/ui/derived_res_no_ref_unit.rs:22:1
   |
22 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
23 | #[unit(Bazoo, "b", "1路f路e")]
24 | struct Baz {}
   |        ^^^
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Baz: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_res_no_ref_unit.rs:22:1
   |
22 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Baz`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Bar
             Foo
             f64
note: required because of the requirements on the impl of `std::ops::Div<Foo>` for `Baz`
  --> tests/ui/derived_res_no_ref_unit.rs:22:1
   |
22 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
23 | #[unit(Bazoo, "b", "1路f路e")]
24 | struct Baz {}
   |        ^^^
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)
